add changelog foldr add docs folder fix database mapper improve broadcast remove unused methods update configuration files